# ClueSolver

./: CMakeLists.txt  Card.h  Player.h  README.md  Solver.cpp  Solver.h  classic.txt  configuration.txt  haunted_mansion.txt  main.cpp  master_detective.txt  star_wars.txt
samples/: 1.js  2.js
